correction for the color contrast.

--- a/styles/base.css
+++ b/styles/base.css
@@ -37,20 +37,19 @@ h3 {
 }
 a {
     text-decoration: none;
-    color: var(--accent-color-2);
+    color: white;
+
 }
 
 li {
     list-style: none;
 }
 
-header {
-    grid-column: 1 / 3;
-}
 
 header {
     display: flex;
     flex-direction: column;
+    grid-column: 1 / 3;
 
 }
 
@@ -92,7 +91,6 @@ header #course-title {
     background-color: var(--primary-color);
     padding: 10px 20px;
     border-radius: 2rem;
-    color: white;
     font-weight: bold;
     transition: background-color 0.3s ease;
 
@@ -211,7 +209,6 @@ footer {
     background-color: var(--primary-color);
     color: var(--accent-color-2);
     text-align: center;
-    padding: 10px;
     grid-column: 1 / 3;
     margin-top: 20px;
     padding: 2rem;
